Set panel to inline-block to ensure it always wraps it's contents

--- a/webapp-php/css/screen.css
+++ b/webapp-php/css/screen.css
@@ -450,7 +450,9 @@ html.production .page-footer { margin-top: 80px; }
 			}
 
 .panel {
+    display: inline-block;
 	color: #303030;
+    min-width: 1024px;
         -webkit-box-shaow: 0 1px 5px -1px #888;
         -moz-box-shadow: 0 1px 5px -1px #888;
         box-shadow: 0 1px 5px -1px #888;
